Making use of new java stream to list