@@ -83,7 +83,7 @@ public class ManagerChangesScheduleProcessor implements ScheduleProcessor {
         if (!teamsWithoutManagers.isEmpty()) {
             final List<Manager> availableManagers = managerList.stream()
                     .filter(manager -> !Objects.equals(manager.getRetired(), 1) && Objects.isNull(manager.getTeamId()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             teamManagerDraftService.assignManagersToTeams(teamsWithoutManagers, availableManagers);
         }
