@@ -147,10 +147,10 @@ class PreseasonScheduleDataGeneratorTest {
             assertNotEquals(
                     firstRun.stream().flatMap(scheduleData -> scheduleData.getMatches().stream())
                             .map(match -> match.getRoadTeam().toString() + match.getHomeTeam().toString())
-                            .collect(Collectors.toList()),
+                            .toList(),
                     secondRun.stream().flatMap(scheduleData -> scheduleData.getMatches().stream())
                             .map(match -> match.getRoadTeam().toString() + match.getHomeTeam().toString())
-                            .collect(Collectors.toList())
+                            .toList()
             );
         }
     }
